@@ -1,4 +1,5 @@
 bin/gem2deb-test-runner /usr/bin/
-lib/gem2deb/rake/testtask.rb /usr/lib/ruby/vendor_ruby/gem2deb/rake
 lib/gem2deb/metadata.rb /usr/lib/ruby/vendor_ruby/gem2deb
+lib/gem2deb/rake/spectask.rb /usr/lib/ruby/vendor_ruby/gem2deb/rake
+lib/gem2deb/rake/testtask.rb /usr/lib/ruby/vendor_ruby/gem2deb/rake
 lib/gem2deb/test_runner.rb /usr/lib/ruby/vendor_ruby/gem2deb
